--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
                             </div>
                         </div>
                         
+                        <div class="">
+                            <div class="">
+                                <a class="float-left" target="_blank" href="https://dailydo.chat/?ref=kiru.io">
+                                    <img class="w-48 py-3" src="/images/dailydo.svg" alt="DailyDo.chat logo">
+                                </a>
+
+                                <div class="h-full hidden">
+                                    <div class="">
+                                        <p class="text-gray-700 text-base font-light"> Telegram Chatbot </p>
+                                    </div>
+                                </div>
+                                <span class="clearfix"></span>
+                            </div>
+                        </div>
+                        
                     </div>
                 </div>
 
