--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,7 @@
 <meta name="author" content="" />
 
 
-<link rel="stylesheet" href="/css/kiru.css">
+<link rel="stylesheet" href="/css/kiru.min.css">
 <link rel="shortcut icon" href="/images/favicon.ico">
 
 <link data-vue-tag="true" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700%7CCardo"><body>
@@ -48,17 +48,17 @@
                                     <div class="flex-grow"></div>
 
                                     <div class="content-end p-3  pb-5 self-end">
-                                        <a class="" target="_blank" href="https://fivelinks.io/?ref=kiru.io">
-                                            <img class="w-full" src="/images/fivelinks.png" alt="FiveLinks logo">
+                                        <a class="" target="_blank" href="https://30min.io/?ref=kiru.io">
+                                            <img class="w-full" src="/images/30min.png" alt="30Min.io logo">
                                         </a>
                                     </div>
 
                                     <div class="px-6 py-4 content-end border-t border-gray-200">
-                                        <p class="text-gray-700 text-base font-light"> Bookmark management for pro users </p>
+                                        <p class="text-gray-700 text-base font-light"> Work 30min a day or pay 1$  </p>
 
                                         
                                         <a class="text-gray-600 font-thin hover:text-blue-800" target="_blank"
-                                           href="https://fivelinks.io/?ref=kiru.io">www.fivelinks.io</a>
+                                           href="https://30min.io/?ref=kiru.io">www.30min.io</a>
                                     </div>
 
 
@@ -68,17 +68,17 @@
                                     <div class="flex-grow"></div>
 
                                     <div class="content-end p-3  pb-5 self-end">
-                                        <a class="" target="_blank" href="https://fluentread.com/?ref=kiru.io">
-                                            <img class="w-full" src="/images/fluentread.png" alt="FluentRead logo">
+                                        <a class="" target="_blank" href="https://dailydo.chat/?ref=kiru.io">
+                                            <img class="w-full" src="/images/dailydo.svg" alt="DailyDo.chat logo">
                                         </a>
                                     </div>
 
                                     <div class="px-6 py-4 content-end border-t border-gray-200">
-                                        <p class="text-gray-700 text-base font-light"> Let as translate for you </p>
+                                        <p class="text-gray-700 text-base font-light"> Telegram Chatbot </p>
 
                                         
                                         <a class="text-gray-600 font-thin hover:text-blue-800" target="_blank"
-                                           href="https://fluentread.com/?ref=kiru.io">www.fluentread.com</a>
+                                           href="https://dailydo.chat/?ref=kiru.io">www.dailydo.chat</a>
                                     </div>
 
 
