--- a/index.html
+++ b/index.html
@@ -11,37 +11,76 @@
 <meta name="author" content="" />
 
 
-<link rel="stylesheet" href="/css/kiru.min.css">
+<link rel="stylesheet" href="/css/kiru.css">
 <link rel="shortcut icon" href="/images/favicon.ico">
 
-<link data-vue-tag="true" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700%7CCardo"><body>
+<link data-vue-tag="true" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700%7CCardo">
 
+<style>
+    .markdown ul{
+        list-style: disc;
+    }
 
+    .markdown li{
+        margin-left: 25px;
+        padding-top: 2px;
+    }
+
+    .markdown a{
+        color: #005b96;
+    }
+
+    .markdown pre{
+        font-size: 0.8rem;
+        line-height: 1.3;
+
+        padding-bottom: 15px;
+        padding-top: 15px;
+
+        padding-left: 10px;
+        margin-left: 3px;
+        border-left: 3px solid rgba(0, 91, 150, 0.2);
+
+    }
+</style><body>
 
 <body class="antialiased font-sans h-screen">
-<div class="bg-white h-screen flex">
-    <div class="mt-16 mx-auto">
+<div class="bg-white flex">
+    <div class="my-16 mx-auto container w-1/3"><div class="mx-auto w-2/3 ">
+    <a href="/" class="w-full flex justify-center">
+        <img src="/images/kiru.png" alt="" class="text-center w-1/2 justify-center">
+    </a>
 
-        <img src="images/kiru.png" alt="" class="w-1/2 sm:w-1/3 mx-auto">
+    <div class="flex flex-1 w-full justify-center uppercase my-10">
+        <div class="mx-2 hover:text-blue-800 hover:border-blue-300 text-xl"><a href="/">Home</a></div>
+        <div class="mx-2 hover:text-blue-800 hover:border-blue-300 text-xl"><a href="/til/">TIL</a></div>
+        <div class="mx-2 hover:text-blue-800 hover:border-blue-300 text-xl"><a href="/projects/">Projects</a></div>
 
-        <div class="mt-4 flex flex-1 w-full justify-center uppercase font-thin text-gray-800 text-base hidden">
-            <div class="mx-2 hover:text-blue-800 hover:border-blue-300 border-b"><a href="/projects/">Projects</a></div>
-            <div class="mx-2 hover:text-blue-800 hover:border-blue-300 border-b"><a href="/til/">TIL</a></div>
+        <div class="hidden">
+            <div class="mx-2 hover:text-blue-800 hover:border-blue-300 text-xl"><a href="/articles/">Articles</a></div>
         </div>
+    </div>
+</div><div class="border-t mx-auto px-6 py-5 text-xl" style="border-color: rgba(0,91,150,0.14);">
 
-        <div class="border-t mx-auto w-5/6 sm:w-1/2 mt-5 pt-5 px-6" style="border-color: rgba(0,91,150,0.29);">
+            <div class="">
+                <div class="float-left">
+                    <img src="/images/kiru-image.jpg" alt=""
+                         class="rounded-full w-32 h-32 self-center mr-8 ml-8">
+                </div>
 
-            <div>
-                <p class="leading-normal">
-                    Hi, I’m Kiru 👋 I am an indie hacker, student, Java developer and vim-lover.
-                    I am building projects to make the life of others and mine easier.
-                </p>
-                <p>
-                    This page is intended to collect all my projects.
-                </p>
+                <div>
+                    <p class="leading-normal">
+                        Hi, I am Kiru 👋 an indie hacker, student, Java developer and vim-lover.
+                        I build
+                        projects to make the life of others and mine easier.
+                    </p>
+                    <p>
+                        This page is intended to collect all my projects.
+                    </p>
+                </div>
             </div>
 
-            <div class="mt-5">
+            <div class="my-8">
                 <div class="">
                     <h1 class="uppercase text-base font-bold pb-1 text-kiru-main">Projects</h1>
                     <div>
@@ -61,52 +100,35 @@
                             </div>
                         </div>
                         
-                        <div class="">
-                            <div class="">
-                                <a class="float-left" target="_blank" href="https://dailydo.chat/?ref=kiru.io">
-                                    <img class="w-48 py-3" src="/images/dailydo.svg" alt="DailyDo.chat logo">
-                                </a>
-
-                                <div class="h-full hidden">
-                                    <div class="">
-                                        <p class="text-gray-700 text-base font-light"> Telegram Chatbot </p>
-                                    </div>
-                                </div>
-                                <span class="clearfix"></span>
-                            </div>
-                        </div>
-                        
                     </div>
                 </div>
 
-                <div class="mt-5">
+                <div class="mt-6">
                     <h1 class="uppercase text-base font-bold pb-1 text-kiru-main">
                         Product updates
                     </h1>
                     <div>
                         You want to know when I publish a new project?
-                        <a class="text-blue-800 font-bold hover:text-blue-600 hover:underline" href="https://cdn.forms-content.sg-form.com/d41f3d17-c500-11e9-91df-2226c80152f5">Sign up here.</a>
+                        <a class="text-blue-800 font-bold hover:text-blue-600 hover:underline"
+                           href="https://cdn.forms-content.sg-form.com/d41f3d17-c500-11e9-91df-2226c80152f5">Sign up
+                            here.</a>
                     </div>
                 </div>
 
-                <div class="mt-5">
+                <div class="mt-6">
                     <h1 class="uppercase text-base font-bold pb-2 text-kiru-main">
                         Contact
                     </h1>
                     <p class="">
-                        You can reach me any time on Twitter <a href="https://twitter.com/kiru_io/"
-                                                                class="text-blue-800 font-bold hover:text-blue-600 hover:underline">@kiru_io</a>
+                        You can reach out to me on Twitter <a href="https://twitter.com/kiru_io/"
+                                                              class="text-blue-800 font-bold hover:text-blue-600 hover:underline">@kiru_io</a>
                         or simply drop me a mail: info at kiru.io.
                     </p>
                 </div>
-
-
-
             </div>
         </div>
     </div>
-
-
+</div>
 </body>
 
 </body>
