--- a/projects/index.html
+++ b/projects/index.html
@@ -7,8 +7,8 @@
 <title>Projects - Kiru.io</title>
 
 
-<meta name="description" content="" />
-<meta name="author" content="" />
+<meta name="description" content=""/>
+<meta name="author" content=""/>
 
 
 <meta name="twitter:card" content="summary"/>
@@ -20,57 +20,169 @@
 <meta property="og:image" content="https://kiru.io/"/>
 
 
-
-<link rel="stylesheet" href="/css/kiru.css">
+<link rel="stylesheet" href="/css/kiru.min.css">
 <link rel="shortcut icon" href="/images/favicon.ico">
 
-<link data-vue-tag="true" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700%7CCardo">
-
 <style>
-    .markdown ul{
+    .markdown{
+        word-break: break-word;
+    }
+
+    .markdown ul {
         list-style: disc;
     }
 
-    .markdown li{
+    .markdown li {
         margin-left: 25px;
         padding-top: 2px;
     }
 
-    .markdown a{
+    .markdown a {
         color: #005b96;
     }
 
-    .markdown pre{
+    .footnotes li{
+        margin-left: 0;
+        font-size: 15px;
+    }
+
+    .footnotes{
+        border-top: 1px solid rgba(49, 130, 206, 0.19);
+        padding-top: 2px;
+        margin-top: 5px;
+    }
+
+    .footnotes hr {
+        display: none;
+    }
+
+    p > code,
+    li > code,
+    dd > code,
+    td > code {
+        background: rgba(183, 194, 194, 0.53);
+        word-wrap: break-word;
+        box-decoration-break: clone;
+        padding: .1rem .3rem .1rem;
+        border-radius: .2rem;
+    }
+
+    .markdown pre {
         font-size: 0.8rem;
         line-height: 1.3;
 
-        padding-bottom: 15px;
-        padding-top: 15px;
+        padding-bottom: 1px;
+        padding-top: 1px;
+        padding-left: 3px;
 
-        padding-left: 10px;
-        margin-left: 3px;
-        border-left: 3px solid rgba(0, 91, 150, 0.2);
+        margin-top: 8px;
+        margin-bottom: 8px;
 
+        margin-left: 10px;
+        border-left: 1px solid rgb(43, 108, 176);
+        color: rgb(42, 67, 101);
     }
-</style><body class="antialiased font-sans h-screen">
+
+    .kiru-container {
+        max-width: 720px;
+        margin: 0 auto;
+    }
+</style><body class="antialiased h-screen mt-3 inter-font mx-4">
+
+<div class="fixed left-0 top-0 h-full bg-blue-500 hidden lg:block" style="width: 30px"></div>
+<div class="fixed left-0 top-0 h-full bg-blue-600 hidden md:block" style="width: 20px"></div>
+<div class="fixed left-0 top-0 h-full bg-blue-700" style="width: 10px"></div>
+
+<div class="fixed right-0 top-0 h-full bg-blue-500 hidden lg:block" style="width: 30px"></div>
+<div class="fixed right-0 top-0 h-full bg-blue-600 hidden md:block" style="width: 20px"></div>
+<div class="fixed right-0 top-0 h-full bg-blue-700" style="width: 10px"></div>
 
 
-<div class="bg-white flex">
-    <div class="my-16 mx-auto container w-full sm:w-1/2 xl:w-1/3"><div class="mx-auto w-2/3">
 
-    <a href="/">
-        <img src="/images/kiru.png" alt="" class="text-center">
-    </a>
-
-    <div class="flex flex-1 w-full justify-center uppercase my-10 text-2xl">
-        <div class="mx-2 hover:text-blue-800 hover:border-blue-300"><a href="/">Home</a></div>
-        <div class="mx-2 hover:text-blue-800 hover:border-blue-300"><a href="/til/">TIL</a></div>
-        <div class="mx-2 hover:text-blue-800 hover:border-blue-300"><a href="/projects/">Projects</a></div>
-
-        <div class="hidden">
-            <div class="mx-2 hover:text-blue-800 hover:border-blue-300 text-xl"><a href="/articles/">Articles</a></div>
+<div class="kiru-container">
+    <div class="border-t mx-auto pt-5 text-xl">
+        <div class="pb-3">
+            <div class="float-left">
+                <a href="/">
+                <img src="/images/kiru-image.jpg" alt="Kiru"
+                     class="rounded-full w-32 h-32 self-center mr-8 mt-4 ">
+                </a>
+            </div>
+            <div>
+                <p class="leading-normal">
+                    Hi, I am <span class="font-bold text-blue-800">Kiru</span> 👋 an indie hacker, a problem solver and
+                    vim-lover.
+                    I build projects to make the life of others and mine easier.
+                </p>
+                <p>
+                    This page is intended to collect all my projects and some thoughts.
+                </p>
+            </div>
         </div>
     </div>
+</div><div class="bg-blue-100">
+    <div class="kiru-container  py-2 font-bold text-xl">
+        <div class="flex flex-1 my-4 text-blue-800" style="text-underline-offset: 5px">
+            <div class="hover:underline"><a href="/">Home</a></div>
+            <div class="mx-2 hover:underline"><a href="/til/">TIL</a></div>
+
+
+            <div class="">
+                <a href="https://twitter.com/kiru_io/"
+                   target="_blank"
+                   class="text-blue-800 font-bold hover:text-blue-600 hover:underline">@kiru_io</a>
+            </div>
+        </div>
+    </div>
+</div><div class="kiru-container hidden">
+    <div class="my-8">
+        <div class="hidden">
+            <h1 class="uppercase text-base font-bold pb-1 text-kiru-main">Projects</h1>
+            <div>
+                
+                <div class="">
+                    <div class="">
+                        <a class="float-left" target="_blank" href="https://30min.io/?ref=kiru.io">
+                            <img class="w-48 py-3" src="/images/30min.png" alt="30Min.io logo">
+                        </a>
+
+                        <div class="h-full hidden">
+                            <div class="">
+                                <p class="text-gray-700 text-base font-light"> Work 30min a day or pay 1$  </p>
+                            </div>
+                        </div>
+                        <span class="clearfix"></span>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+        <div class="mt-6 hidden">
+            <h1 class="uppercase text-base font-bold pb-1 text-kiru-main">
+                Product updates
+            </h1>
+            <div>
+                You want to know when I publish a new project?
+                <a class="text-blue-800 font-bold hover:text-blue-600 hover:underline"
+                   href="https://cdn.forms-content.sg-form.com/d41f3d17-c500-11e9-91df-2226c80152f5">Sign up
+                    here.</a>
+            </div>
+        </div>
+
+        <div class="mt-6 hidden">
+            <h1 class="uppercase text-base font-bold pb-2 text-kiru-main">
+                Contact
+            </h1>
+            <p class="">
+                You can reach out to me on Twitter <a href="https://twitter.com/kiru_io/"
+                                                      class="text-blue-800 font-bold hover:text-blue-600 hover:underline">@kiru_io</a>
+                or simply drop me a mail: info (at) kiru.io
+            </p>
+        </div>
+    </div>
+</div>
+
 </div>
 
 <div class="border-t mx-auto px-6 py-5 text-xl" style="border-color: rgba(0,91,150,0.14);">
@@ -115,7 +227,5 @@
 
 </div>
 
-
-    </div>
-</div></body>
+<div class="pb-5"></div></body>
 </html>
