--- a/til/index.html
+++ b/til/index.html
@@ -200,6 +200,15 @@
         
         <div class="kiru-container">
             <div class="pb-0 font-medium">
+                <span class="text-gray-500 text-sm font-mono pr-3">TIL 25.05.2021</span>
+                <a href="https://kiru.io/til/2021-05-25-tagged_templates/" class="hover:underline">
+                    <span class="text-blue-700 font-bold">Tagged Templates in JavaScript</span>
+                </a>
+            </div>
+        </div>
+        
+        <div class="kiru-container">
+            <div class="pb-0 font-medium">
                 <span class="text-gray-500 text-sm font-mono pr-3">TIL 28.06.2020</span>
                 <a href="https://kiru.io/til/2020-06-28-multiselect/" class="hover:underline">
                     <span class="text-blue-700 font-bold">Empty multiselect is not set</span>
