--- a/til/index.html
+++ b/til/index.html
@@ -68,14 +68,17 @@
         font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     }
 
+    .markdown p {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+
     .markdown pre {
         background-color: rgba(178, 187, 193, 0.16);
         font-size: 0.8rem;
         line-height: 1.3;
 
-        padding-bottom: 5px;
-        padding-top: 5px;
-        padding-left: 3px;
+        padding: 15px;
 
         margin-left: 1px;
         margin-bottom: 15px;
@@ -104,7 +107,7 @@
         max-width: 720px;
         margin: 0 auto;
     }
-</style><body class="antialiased h-screen mt-3 inter-font mx-2">
+</style><body class="antialiased h-screen mt-3  mx-2">
 
 <div class="fixed left-0 top-0 h-full bg-blue-600 hidden lg:block" style="width: 15px"></div>
 <div class="fixed left-0 top-0 h-full bg-blue-700 hidden md:block" style="width: 10px"></div>
@@ -138,12 +141,12 @@
         </div>
     </div>
 </div><div class="bg-blue-100">
-    <div class="kiru-container  py-2 font-bold text-xl ">
+    <div class="kiru-container  py-2 text-xl ">
         <div class="flex flex-1 my-4 text-blue-800 justify-center" style="text-underline-offset: 5px">
-            <div class="hover:underline"><a href="/">Home</a></div>
+            <div class="mx-2 hover:underline"><a href="/">Home</a></div>
             <div class="mx-2 hover:underline"><a href="/til/">TIL</a></div>
-
-
+           
+           <div class="mx-2 hover:underline"><a href="/articles/">Articles</a></div>
             <div class="">
                 <a href="https://twitter.com/kiru_io/"
                    target="_blank"
@@ -151,7 +154,8 @@
             </div>
         </div>
     </div>
-</div><div class="kiru-container hidden">
+</div>
+<div class="kiru-container hidden">
     <div class="my-8">
         <div class="hidden">
             <h1 class="uppercase text-base font-bold pb-1 text-kiru-main">Projects</h1>
