--- a/til/2017-03-07-binding/index.html
+++ b/til/2017-03-07-binding/index.html
@@ -15,9 +15,14 @@
 <meta name="twitter:creator" content="@kiru_io"/>
 
 <meta property="og:title" content="TIL 07.03.2017"/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="https://30min.io/images/og-logo.png"/>
-<meta property="og:image" content="https://kiru.io/"/>
+<meta property="og:url" content="https://kiru.io/til/2017-03-07-binding/" />
+<meta property="og:image" content="https://kiru.io/images/kiru-image.jpg"/>
+<meta property="og:description" content="binding 127.0.0.1 means listen to loopback interface Process bound to 127.0.0.1 can only be accessed by other programs from the same machine
+ binding to 0.0.0.0 means listen to all interfaces ( e.g. all network interfaces connected to the machine )
+ on Mac 27.0.0.1 /32 is bound to loopback
+ on Windows 127.0.0.0 /8 is bound to loopback
+  Source: 0.0.0.0 vs 127.0.0.1" />
+<meta property="og:type" content="article" />
 
 
 <link rel="stylesheet" href="/css/kiru.css">
@@ -225,8 +230,8 @@ Source: <a href="http://blog.lauramamina.com/article?title=0.0.0.0%20vs%20127.0.
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-29-uri/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Is URI case sensitive?</span>
+            <a href="https://kiru.io/til/2017-03-13-java-and-oracle/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Java Enum and extract in SQL</span>
             </a>
         </div>
     </div>
