--- a/til/2020-06-28-multiselect/index.html
+++ b/til/2020-06-28-multiselect/index.html
@@ -15,9 +15,13 @@
 <meta name="twitter:creator" content="@kiru_io"/>
 
 <meta property="og:title" content="TIL 28.06.2020"/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="https://30min.io/images/og-logo.png"/>
-<meta property="og:image" content="https://kiru.io/"/>
+<meta property="og:url" content="https://kiru.io/til/2020-06-28-multiselect/" />
+<meta property="og:image" content="https://kiru.io/images/kiru-image.jpg"/>
+<meta property="og:description" content="Having the following input:
+&lt;label for=&quot;cars&quot;&gt;Make your choice:&lt;/label&gt; &lt;select name=&quot;choice&quot; id=&quot;choice&quot; multiple&gt; &lt;option value=&quot;Yes&quot;&gt;Volvo&lt;/option&gt; &lt;option value=&quot;No&quot;&gt;Saab&lt;/option&gt; &lt;option value=&quot;Maybe&quot;&gt;Saab&lt;/option&gt; &lt;/select&gt;  If nothing is selected, the name of the property is not sent to the server (e.g. if you expect the full set to be sent to the server)
+A hack to fix this is to add a hidden property with the same name.
+&lt;input type=&quot;hidden&quot; name=&quot;myitems&quot; value=&quot;&quot; /&gt;  " />
+<meta property="og:type" content="article" />
 
 
 <link rel="stylesheet" href="/css/kiru.css">
@@ -235,16 +239,16 @@
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-29-uri/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Is URI case sensitive?</span>
+            <a href="https://kiru.io/til/2017-03-07-binding/" class="hover:underline">
+                <span class="text-blue-700 font-bold">What is the difference between 127.0.0.1 and 0.0.0.0?</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Simulate network control</span>
+            <a href="https://kiru.io/til/2019-12-04-pid/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Waiting for process</span>
             </a>
         </div>
     </div>
