--- a/til/2020-06-28-multiselect/index.html
+++ b/til/2020-06-28-multiselect/index.html
@@ -239,16 +239,16 @@ A hack to fix this is to add a hidden property with the same name.
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-05-sms-length/" class="hover:underline">
-                <span class="text-blue-700 font-bold">What is the max length of an SMS?</span>
+            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Simulate network control</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-28-sqllite/" class="hover:underline">
-                <span class="text-blue-700 font-bold">SQLite Type Affinity</span>
+            <a href="https://kiru.io/til/2019-05-17-pipe-linux/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Shortcut for linux pipe</span>
             </a>
         </div>
     </div>
