--- a/til/2021-05-25-tagged_templates/index.html
+++ b/til/2021-05-25-tagged_templates/index.html
@@ -236,8 +236,8 @@ Keys [&quot;Kiru&quot;]
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-13-java-and-oracle/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Java Enum and extract in SQL</span>
+            <a href="https://kiru.io/til/2017-03-29-uri/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Is URI case sensitive?</span>
             </a>
         </div>
     </div>
@@ -252,8 +252,8 @@ Keys [&quot;Kiru&quot;]
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2020-06-28-multiselect/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Empty multiselect is not set</span>
+            <a href="https://kiru.io/til/2019-05-17-pipe-linux/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Shortcut for linux pipe</span>
             </a>
         </div>
     </div>
