--- a/projects/index.html
+++ b/projects/index.html
@@ -76,7 +76,7 @@
 
     .markdown pre {
         background-color: rgba(178, 187, 193, 0.16);
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         line-height: 1.3;
 
         padding: 15px;
@@ -148,6 +148,7 @@
             <div class="mx-2 hover:underline"><a href="/til/">TIL</a></div>
            
            <div class="mx-2 hover:underline"><a href="/articles/">Articles</a></div>
+            <div class="mx-2 hover:underline text-orange-800 font-bold"><a href="/articles/adventofsaas2021/">AdventOfSaaS 2021</a></div>
             <div class="">
                 <a href="https://twitter.com/kiru_io/"
                    target="_blank"
