--- a/index.html
+++ b/index.html
@@ -217,9 +217,14 @@
         </div>
 
         <div class="markdown">
-            <div class="my-5">
+            <div class="text-sm">
+🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 25 days
+⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 100 customer
+</div>
+<div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#01.12.2021">01.12.2021: Work log</a> </li>
   <li>
     <a href="#01.12.2021">01.12.2021: Launch AdventOfSaas 2021</a>
     <ul>
@@ -230,24 +235,22 @@
         <a href="#success"> <li>What is a successful SaaS for me?</li> </a>
     </ul>
   </li>
-  <li> <a href="#01.12.2021">02.12.2021: Initial tasks</a> </li>
 </ul>
 </div>
-<div class="bg-orange-300 p-2 font-semibold " id="02.12.2021">02.12.2021: Initial tasks</div>
-<pre style="background-color: white; font-size: 1.1rem; padding-left: 1px"  class="mt-4">
- # This 
+<div class="bg-orange-200 p-1 font-semibold " id="02.12.2021">01.12.2021: Work log</div>
+<p><em>What I planned to do and what I did</em></p>
+<pre style="background-color: white; font-size: 1.1rem; padding: 1px" >
+ □ Publish this page on kiru.io (done: https://kiru.io/articles/adventofsaas2021/)
+ □ Get dictatly.com
+ □ Create landing page with MVP and a basic description of the idea 
  □ Setup project on GitHub
- □ Buy domain with initial landing page
+ □ Setup initial landing page
  □ Define MVP and timeline
-
- # Past
- □ Add simple navigation (not needed, let's try a single-page)
-
- # to write TODOs
- □ To be done (tagA, tagB)
- ■ Done (when)
+ □ Add progress bar in days on the main page
+ □ Publish on Twitter
+ □ Publish on IndieHackers
 </pre>
-<div class="bg-orange-300 p-2 font-semibold " id="01.12.2021">
+<div class="bg-orange-200 p-1 font-semibold " id="01.12.2021">
 01.12.2021: Launch AdventOfSaas 2021
 </div>
 <h3 class="font-bold text-xl pt-5" id="aof2021">AdventOfCode 2021</h3>
@@ -287,7 +290,7 @@ Level 1:
 <pre>
 Level 2:
 - MRR to Cover all the costs (server + domain and other services used)
-- Double my Twitter follower count (new 120)
+- Double my Twitter follower count (new 122)
 </pre>
 <pre>
 Level(s) 3:
