--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
         </div>
 
         <div class="markdown">
-            <div class="text-sm">
+            <div class="text-sm font-mono tracking-wide">
+Progress: 
 🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 25 days
-⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 100 customer
 </div>
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
@@ -233,6 +233,7 @@
         <a href="#work"> <li>What am I going to work on?</li> </a>
         <a href="#done"> <li>What has been done until now?</li> </a>
         <a href="#success"> <li>What is a successful SaaS for me?</li> </a>
+        <a href="#quest"> <li>Got more questions?</li> </a>
     </ul>
   </li>
 </ul>
@@ -240,7 +241,8 @@
 <div class="bg-orange-200 p-1 font-semibold " id="02.12.2021">01.12.2021: Work log</div>
 <p><em>What I planned to do and what I did</em></p>
 <pre style="background-color: white; font-size: 1.1rem; padding: 1px" >
- □ Publish this page on kiru.io (done: https://kiru.io/articles/adventofsaas2021/)
+ □ Publish this page on kiru.io 
+   (done: https://kiru.io/articles/adventofsaas2021/)
  □ Get dictatly.com
  □ Create landing page with MVP and a basic description of the idea 
  □ Setup project on GitHub
@@ -299,6 +301,9 @@ Level(s) 3:
 - >500 Twitter followers
 - Consistency: I manage to work for 24 days for 1h per day
 </pre>
+<h3 class="font-bold text-xl pt-5" id="quest">Got more questions?</h3>
+<p>If something is not clear, or you just want to contact me, go ahead.
+Hit me on Twitter (<a href="https://twitter.com/kiru_io" target="_blank">kiru_io</a>).</p>
 
         </div>
     </div>
