--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ Progress:
   <li>
     <a href="#01.12.2021">01.12.2021: Launch AdventOfSaas 2021</a>
     <ul>
-        <a href="#aof2021"> <li>AdventOfCode 2021</li> </a>
+        <a href="#aof2021"> <li>AdventOfSaaS 2021</li> </a>
         <a href="#what-is-advent"> <li>What is AdventOfSaaS?</li> </a>
         <a href="#work"> <li>What am I going to work on?</li> </a>
         <a href="#done"> <li>What has been done until now?</li> </a>
@@ -241,21 +241,23 @@ Progress:
 <div class="bg-orange-200 p-1 font-semibold " id="02.12.2021">01.12.2021: Work log</div>
 <p><em>What I planned to do and what I did</em></p>
 <pre style="background-color: white; font-size: 1.1rem; padding: 1px" >
- □ Publish this page on kiru.io 
-   (done: https://kiru.io/articles/adventofsaas2021/)
- □ Get dictatly.com
- □ Create landing page with MVP and a basic description of the idea 
+ ■ Publish this page on kiru.io 
+ ■ Get domain flashdictation.com
+ ■ Add progress bar in days on the main page
  □ Setup project on GitHub
- □ Setup initial landing page
- □ Define MVP and timeline
- □ Add progress bar in days on the main page
+ □ Setup initial landing page with simple description
+ □ Make a simple logo 
+ □ Define MVP
+ □ Define timeline
  □ Publish on Twitter
  □ Publish on IndieHackers
 </pre>
+<p>How did the day go?</p>
+<p><em>To be done</em></p>
 <div class="bg-orange-200 p-1 font-semibold " id="01.12.2021">
 01.12.2021: Launch AdventOfSaas 2021
 </div>
-<h3 class="font-bold text-xl pt-5" id="aof2021">AdventOfCode 2021</h3>
+<h3 class="font-bold text-xl pt-5" id="aof2021">AdventOfSaaS 2021</h3>
 <p>Is it possible to bootstrap a successful SaaS business in 24 days? Let&rsquo;s find it out together:  AdventOfSaaS 2021!</p>
 <p>My name is Kiru. Join me on the journey of this project. I will keep this page up-to-date with daily progress and any
 interesting stats.</p>
@@ -264,12 +266,12 @@ interesting stats.</p>
 Service) project every day. The time spent varies depending on my workload. This project is done alongside my usual
 work. From 1.12.2021 to 25.12.2021, I pledge to dedicate at least 1h per day (with 4h weekend budget) and post daily updates here.</p>
 <h3 class="font-bold text-xl pt-5" id="done">What has been done until now?</h3>
-This launch post was written before December, as well as the project ideas were collected. No code has been written
-until now.
+<p>This launch post was written before December, as well as the project ideas were collected. No code has been written
+until now.</p>
 <h3 class="font-bold text-xl pt-5" id="work">What am I going to work on?</h3>
-Dictatly: I am trying to improve my French. One effective tool are dictations. I would like to watch a video or listen to
-a podcast and write down what I hear. Right now, I do this by hand and then go over the text to correct. 
-It would be simpler to use the existing transcript to autocorrect and show the mistakes, as well as track my mistakes. 
+<p>Dictatly: I am trying to improve my French. One effective tool are dictations. I would like to watch a video or listen to
+a podcast and write down what I hear. Right now, I do this by hand and then go over the text to correct.
+It would be simpler to use the existing transcript to autocorrect and show the mistakes, as well as track my mistakes.</p>
 <p>Few notes on the idea:</p>
 <ul>
 <li>I did not find a tool that satisfies my need</li>
@@ -287,7 +289,7 @@ Level 0:
 <pre>
 Level 1:
 - At least one paying customer
-- At least 5 new Twitter follower
+- At least 5 new Twitter followers
 </pre>
 <pre>
 Level 2:
