--- a/til/2019-05-17-pipe-linux/index.html
+++ b/til/2019-05-17-pipe-linux/index.html
@@ -91,6 +91,7 @@ This :
 
         border-left: 1px solid rgb(43, 108, 176);
         color: rgb(42, 67, 101);
+        overflow-x: auto;
     }
 
     .markdown blockquote {
@@ -234,16 +235,16 @@ This :
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-30-bash-shortcuts/" class="hover:underline">
-                <span class="text-blue-700 font-bold">BASH Shortcuts I was not not aware of</span>
+            <a href="https://kiru.io/til/2019-11-05-simulate-network-control/" class="hover:underline">
+                <span class="text-blue-700 font-bold">Simulate network control</span>
             </a>
         </div>
     </div>
     
     <div class="kiru-container">
         <div class="pb-0 font-medium">
-            <a href="https://kiru.io/til/2017-03-29-uri/" class="hover:underline">
-                <span class="text-blue-700 font-bold">Is URI case sensitive?</span>
+            <a href="https://kiru.io/til/2017-03-07-binding/" class="hover:underline">
+                <span class="text-blue-700 font-bold">What is the difference between 127.0.0.1 and 0.0.0.0?</span>
             </a>
         </div>
     </div>
