--- a/index.html
+++ b/index.html
@@ -220,14 +220,15 @@
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide">
 Progress: 
-🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 25 days
+🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 2/25 days
 </div>
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
-  <li> <a href="#01.12.2021">01.12.2021: Work log</a> </li>
+  <li> <a href="#day2">Day 2: Define MVP and Timeline</a> </li>
+  <li> <a href="#01.12.2021">Day 1: Setup</a> </li>
   <li>
-    <a href="#01.12.2021">01.12.2021: Launch AdventOfSaas 2021</a>
+    <a href="#01.12.2021">Day 0: Launch AdventOfSaas 2021</a>
     <ul>
         <a href="#aof2021"> <li>AdventOfSaaS 2021</li> </a>
         <a href="#what-is-advent"> <li>What is AdventOfSaaS?</li> </a>
@@ -239,7 +240,17 @@ Progress:
   </li>
 </ul>
 </div>
-<div class="bg-orange-200 p-1 font-semibold mt-8" id="02.12.2021">01.12.2021: Work log</div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day2">Day 1: Setup</div>
+<p>The main goal of today is to define the MVP, e.g. more in details and the tiny steps needed to go there.</p>
+<p>The detailed tasks help me to stay focused, and not get distracted by other (nice to have) features.</p>
+<p>For the audio, I need a way to show a player on my page. I will try with this component: <a href="https://www.npmjs.com/package/react-player">react-component</a>.
+It seems easy to use and allows audio and video - so I don&rsquo;t have to implement it by myself.</p>
+<p>For testing, I will use the
+<a href="https://www.youtube.com/channel/UCI4xp8qHD1MDErkqxb1dPbA">innerFrench</a> video -
+especially since they come with proper subtitles, and the transcripts are free.</p>
+<p>Apart from that, I want to focus on attracting more traffic to <a href="http://flashdictation.com">
+flashdictation.com</a> and to this site, so I published this project to IndieHackers.com:</p>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="01.12.2021">Day 1: Setup</div>
 <p><em>What I planned to do and what I did</em></p>
 <pre style="background-color: white; font-size: 1.1rem; padding: 1px" >
  ■ Publish this page on kiru.io 
@@ -275,7 +286,7 @@ was not clear to me as well. So I spent most of the time writing down what I exp
 <p>Go checkout what I produced today:</p>
 <h3 class="text-xl font-bold"><a href="http://flashdictation.com">flashdictation.com</a></h3>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="01.12.2021">
-01.12.2021: Launch AdventOfSaas 2021
+Day 0: Launch AdventOfSaas 2021
 </div>
 <h3 class="font-bold text-xl pt-5" id="aof2021">AdventOfSaaS 2021</h3>
 <p>Is it possible to bootstrap a successful SaaS business in 24 days? Let&rsquo;s find it out together:  AdventOfSaaS 2021!</p>
