--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Progress:
   </li>
 </ul>
 </div>
-<div class="bg-orange-200 p-1 font-semibold mt-8" id="day2">Day 1: Setup</div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day2">Day 2: Define MVP</div>
 <p>The main goal of today is to define the MVP, e.g. more in details and the tiny steps needed to go there.</p>
 <p>The detailed tasks help me to stay focused, and not get distracted by other (nice to have) features.</p>
 <p>For the audio, I need a way to show a player on my page. I will try with this component: <a href="https://www.npmjs.com/package/react-player">react-component</a>.
