--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Progress:
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
-  <li> <a href="#day2">Day 2: Define MVP and Timeline</a> </li>
+  <li> <a href="#day2">Day 2: Define MVP</a> </li>
   <li> <a href="#01.12.2021">Day 1: Setup</a> </li>
   <li>
     <a href="#01.12.2021">Day 0: Launch AdventOfSaas 2021</a>
