--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@ It seems easy to use and allows audio and video - so I don&rsquo;t have to imple
 <a href="https://www.youtube.com/channel/UCI4xp8qHD1MDErkqxb1dPbA">innerFrench</a> video -
 especially since they come with proper subtitles, and the transcripts are free.</p>
 <p>Apart from that, I want to focus on attracting more traffic to <a href="http://flashdictation.com">
-flashdictation.com</a> and to this site, so I published this project to IndieHackers.com:</p>
+flashdictation.com</a> and to this site, so I published this project to IndieHackers.com:
+<a href="https://www.indiehackers.com/post/adventofsaas-2021-flashdictation-3ba2cf528b">AdventOfSaaS 2021: flashdictation</a></p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="01.12.2021">Day 1: Setup</div>
 <p><em>What I planned to do and what I did</em></p>
 <pre style="background-color: white; font-size: 1.1rem; padding: 1px" >
