--- a/index.html
+++ b/index.html
@@ -220,11 +220,12 @@
         <div class="markdown">
             <div class="text-sm font-mono tracking-wide">
 Progress: 
-🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 2/25 days
+🟩🟩🟨⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜⬜ 3/25 days
 </div>
 <div class="my-5">
 <h3 class="font-bold text-xl">Table of content</h3>
 <ul class="list-disc ml-3">
+  <li> <a href="#day3">Day 3: Add video player</a> </li>
   <li> <a href="#day2">Day 2: Define MVP</a> </li>
   <li> <a href="#01.12.2021">Day 1: Setup</a> </li>
   <li>
@@ -240,6 +241,14 @@ Progress:
   </li>
 </ul>
 </div>
+<div class="bg-orange-200 p-1 font-semibold mt-8" id="day3">Day 3: Add video player</div>
+<p>Today&rsquo;s goal was to experiment with the video player. It was fairly easy to add the player,
+most of the time I spent to make the page more prettier.</p>
+<p>This is the final result:
+<img src="/images/day3.png" alt="Screenshot Day 3" class="lg:w-3/4 shadow-xl mx-auto py-2 border-default border-blue-800 rounded-lg"></p>
+<p>Tomorrow, I am going to add the correction logic. That should be enough to test the MVP.
+The next is to add few shortcuts to control the player.</p>
+<p>With the above mockup, I can easily explain this project to anyone.</p>
 <div class="bg-orange-200 p-1 font-semibold mt-8" id="day2">Day 2: Define MVP</div>
 <p>The main goal of today is to define the MVP, e.g. more in details and the tiny steps needed to go there.</p>
 <p>The detailed tasks help me to stay focused, and not get distracted by other (nice to have) features.</p>
